Commented code; fixed minor spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,7 @@ body {
     background-color: var(--brown-darkest);
     color: var(--light-mono);
     font-family: var(--main-font);
+    overflow-x: hidden;
 }
 
 /* Hyperlinks are colored green and have their underlines removed */
@@ -158,7 +159,7 @@ Header CSS
     max-width:800px;
     top:var(--lg-pad);
     transform: rotate(-12deg);
-    text-align: right;
+    text-align: center;
 }
 
 /* The bear head is responsive but doesn't take up a ridiculous amount of space at high resolutions */
@@ -240,7 +241,7 @@ Navigation Links CSS
 Main Content Section CSS
 ===================================================*/
 
-/* Arranges the main content in a column, which contains each master section */
+/* Arranges the main content in a column, which contains each master section, and restricts their width */
 #content {
     display:flex;
     flex-direction: column;
@@ -252,16 +253,13 @@ Main Content Section CSS
     margin-right: auto;
 }
 
-/* The master sections arrange their contents left to right and take up the full width */
+/* The master sections take up the full width */
 .main-section {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    vertical-align: middle;
-    width:100%;
 }
 
-/* Displays the section header to the left of the screen */
+/* Controls the flex properties and padding, text is handled by h2 */
 .card-header {
     display: flex;
     flex: 0 0;
@@ -295,8 +293,8 @@ Work Example Gallery CSS
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-
     align-items:center;
+
     padding:5em;
 }
 
@@ -354,6 +352,7 @@ a:hover .demo-card-outer {
     animation-fill-mode: forwards;
 }
 
+/* Special hover effects for the card borders */
 a:hover .demo-card-inner {
     animation: inner-card-glow 0.5s ease-in-out;
     animation-fill-mode: forwards;
@@ -420,6 +419,11 @@ Footer CSS
     border-top: 1px solid var(--green-dark);
 }
 
+/* Gets rid of the text indent for spacing purposes */
+#footer p {
+    text-indent: 0;
+}
+
 /* =================================================
 Small Screen Media Query
 ===================================================*/
@@ -459,6 +463,12 @@ Small Screen Media Query
     /* Unsets the float and returns the logo to the flow */
     .bear-logo img {
         float: unset;
+    }
+
+    #content {
+        width:95vw;
+        margin: unset;
+        padding:unset;
     }
 
     /* Makes main content flow into a column instead of side by side with headers */
